--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <h1 class="sub-title hover-effect">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="images/shri21 - Copy.jpg">
+                    <img src="images/port.PNG">
                     <div class="layer">
                         <h3 class=" hover-effect">Personal Portfolio Website</h3>
                         <p>The Personal Portfolio Website tells about my all proffessional details skills and work, You
@@ -166,12 +166,24 @@
                                 style="color: #403f3f;"></i></i></a>
                     </div>
                 </div>
+                
+            </div>
+            <div class="work-list">
                 <div class="work">
                     <img src="images/ttt.PNG">
                     <div class="layer">
                         <h3 class=" hover-effect">Tik Tak Toe</h3>
                         <p>Build a responsive Tik Tak Toe Game.</p>
                         <a href="https://shrikant48.github.io/Tik-Tak-Toe/"><i class="fa-solid fa-arrow-up-right-from-square fa-xl"
+                                style="color: #403f3f;"></i></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img src="images/currimg.PNG">
+                    <div class="layer">
+                        <h3 class=" hover-effect">Currency Converter</h3>
+                        <p>Build a responsive Currency Converter website that supports over 158 countries.</p>
+                        <a href="https://shrikant48.github.io/Currency-Converter/"><i class="fa-solid fa-arrow-up-right-from-square fa-xl"
                                 style="color: #403f3f;"></i></i></a>
                     </div>
                 </div>
